refactor(): changed name of article to publication
