# src/application/article/query/dto/article.dto.go
@@ -1,16 +1,0 @@
-package dto
-
-import (
-	"golang-gingonic-hex-architecture/src/domain/article/model"
-	"time"
-)
-
-type ArticleDto struct {
-	Id          int
-	Title       string
-	Description string
-	Content     string
-	WiterUserId string
-	WrittenAt   time.Time
-	Type        model.ArticleTypes
-}
